--- a/src/styles/auth/login.style.css
+++ b/src/styles/auth/login.style.css
@@ -1,13 +1,6 @@
 .login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    padding: 24px;
     border: 1px solid #ccc;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-
-    height: 40%;
-    width: 40%;
+    min-height: 60%;
+    min-width: 50%;
 }
